feat: Use LLM components in Docling (#9770)
* configure Docling bundle with LC LLM objects

Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

* cleanup old not used code

Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

* pin released docling plugin

Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

* use generic pydantic serialization

Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

* Apply suggestions from code review

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* [autofix.ci] apply automated fixes

---------

Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>
Co-authored-by: autofix-ci[bot] <114827586+autofix-ci[bot]@users.noreply.github.com>
Co-authored-by: Eric Hare <ericrhare@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -204,6 +204,7 @@ Documentation = "https://docs.langflow.org"
 [project.optional-dependencies]
 docling = [
     "docling>=2.36.1",
+    "langchain-docling>=1.1.0",
     "tesserocr>=2.8.0",
     "rapidocr-onnxruntime>=1.4.4",
     "ocrmac>=1.0.0; sys_platform == 'darwin'",
