ci: Change build and test jobs to self-hosted runners (#9837)

--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -24,7 +24,7 @@ env:
 
 jobs:
   test-docker:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     name: Test docker images
     steps:
       - uses: actions/checkout@v4
